fix: make button--text arrow vertically align middle

--- a/src/styles/base/_buttons.scss
+++ b/src/styles/base/_buttons.scss
@@ -56,9 +56,7 @@
   &--text {
     --button-background-color: transparent;
     --button-text-color: var(--color-text);
-    align-items: center;
     border: 0;
-    display: inline-flex;
     padding: 0;
 
     &::after {
@@ -71,6 +69,7 @@
       height: 2rem;
       margin-left: 0.5rem;
       transition: background-position 0.2s ease-out;
+      vertical-align: middle;
       width: 2.2rem;
     }
 
